Added pages and navigation framework

--- a/vis-cloudiness.html
+++ b/vis-cloudiness.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Web Visualization Dashboard</title>
+    <title>Web Visualization Dashboard: Cloudiness</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -32,7 +32,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="vis-maxtemperature.html">Max Temperature</a>
                             <a class="dropdown-item" href="vis-humidity.html">Humidity</a>
-                            <a class="dropdown-item" href="vis-cloudiness.html">Cloudiness</a>
+                            <a class="dropdown-item active" href="vis-cloudiness.html">Cloudiness</a>
                             <a class="dropdown-item" href="vis-windspeed.html">Wind Speed</a>
                         </div>
                     </li>
@@ -47,7 +47,7 @@
     </nav>
 
     <div class="container">
-        temp -> this is the index page!
+        temp -> this is the cloudiness page!
     </div>
 
 
