--- a/data.html
+++ b/data.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Web Visualization Dashboard</title>
+    <title>Web Visualization Dashboard: Data</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -22,33 +22,35 @@
         </button>
 
         <div id="navbarNavDropdown" class="navbar-collapse collapse">
-                <ul class="navbar-nav mr-auto">
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Plots
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="vis-maxtemperature.html">Max Temperature</a>
-                            <a class="dropdown-item" href="vis-humidity.html">Humidity</a>
-                            <a class="dropdown-item" href="vis-cloudiness.html">Cloudiness</a>
-                            <a class="dropdown-item" href="vis-windspeed.html">Wind Speed</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="comparison.html">Comparison</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="data.html">Data</a>
-                    </li>
-                </ul>
-            </div>
+            <ul class="navbar-nav mr-auto">
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Plots
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="vis-maxtemperature.html">Max Temperature</a>
+                        <a class="dropdown-item" href="vis-humidity.html">Humidity</a>
+                        <a class="dropdown-item" href="vis-cloudiness.html">Cloudiness</a>
+                        <a class="dropdown-item" href="vis-windspeed.html">Wind Speed</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="comparison.html">Comparison </a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="data.html">Data  <span class="sr-only">(current)</span> </a>
+                </li>
+            </ul>
+        </div>
     </nav>
 
     <div class="container">
-        temp -> this is the index page!
+        <h1>temp -> data page</h1>
     </div>
+    
+
 
 
     <!-- Bootstrap JavaScript -->
