--- a/data.html
+++ b/data.html
@@ -13,7 +13,7 @@
 <body>
     
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
 
         <a class="navbar-brand" href="index.html">Lattitude</a>
 
@@ -46,7 +46,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container mt-5">
         <h1>Data</h1>
         <hr>
         <p>The following table includes all of the data used for plotting during this project.</p>
@@ -9005,6 +9005,12 @@
     </div>
     
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <span class="text-muted text-center">Web Visualization Dashboard - <em><small>Scott McEachern</small></em></span>
+        </div>
+    </footer>
 
 
     <!-- Bootstrap JavaScript -->
