Update landing navbar and footer

--- a/data.html
+++ b/data.html
@@ -6,8 +6,8 @@
 
     <title>Web Visualization Dashboard: Data</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Bootstrap CSS: Use lux theme -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/lux/bootstrap.min.css" integrity="sha384-hVpXlpdRmJ+uXGwD5W6HZMnR9ENcKVRn855pPbuI/mwPIEKAuKgTKgGksVGmlAvt" crossorigin="anonymous">
 
 </head>
 <body>
@@ -9008,7 +9008,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <span class="text-muted text-center">Web Visualization Dashboard - <em><small>Scott McEachern</small></em></span>
+            <span class="text-muted text-center"><h6>Web Visualization Dashboard</h6></span>
         </div>
     </footer>
 
